--- a/static/css/reset.css
+++ b/static/css/reset.css
@@ -88,3 +88,10 @@ body {
     -webkit-text-size-adjust: none;
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
+
+body, html{
+    line-height: 1;
+    font-weight: 200;
+    font-size: ;
+    font-family: 'PingFang SC', 'STHeitiSC-Light', 'Helvetica-Light', arial, sans-serif;
+}
